--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(KLdegree)
 export(KLspectrum)
 export(adjacencyMatrix)
 export(averageBetweennessCentrality)
+export(averageBetweennessEdgesCentrality)
 export(averageClosenessCentrality)
 export(averageClusteringCoefficient)
 export(averageDegreeCentrality)
@@ -12,6 +13,7 @@ export(averageShortestPath)
 export(betweennessCentrality)
 export(betweennessCentralityTest)
 export(betweennessCentralityVertexTest)
+export(betweennessEdgesCentrality)
 export(centralityPathPlot)
 export(closenessCentrality)
 export(closenessCentralityTest)
@@ -25,6 +27,8 @@ export(degreeCentralityVertexTest)
 export(degreeDistributionTest)
 export(diffNetAnalysis)
 export(doLabels)
+export(edgeBetweennessEdgeTest)
+export(edgeBetweennessTest)
 export(eigenvectorCentrality)
 export(eigenvectorCentralityTest)
 export(eigenvectorCentralityVertexTest)
@@ -37,11 +41,7 @@ export(runBioNetStat)
 export(spectralDistributionTest)
 export(spectralEntropies)
 export(spectralEntropyTest)
-import("igraph","plyr","shiny","RJSONIO","ggplot2","pathview","pheatmap","whisker","yaml","RColorBrewer","shinyBS","knitr")
-importFrom("stats", "aggregate", "bw.nrd0", "cor", "density", "dist",
-             "median", "p.adjust")
-importFrom("utils", "read.csv", "read.table")
-importFrom("Hmisc","rcorr")
-importFrom("psych","corr.test")
-importFrom(BiocParallel, bplapply, MulticoreParam)
-
+import(igraph)
+import(pathview)
+importFrom(Hmisc,rcorr)
+importFrom(psych,corr.test)
