--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BioNetStat
 Type: Package
 Title: Biological Network Analysis
-Version: 1.23.0
+Version: 1.23.1
 Author: Vinícius Jardim, Suzana Santos, André Fujita, and Marcos Buckeridge
 Maintainer: Vinicius Jardim <viniciusjc@gmail.com>
 Description: A package to perform differential network analysis, differential node analysis (differential coexpression analysis), network and metabolic pathways view.
@@ -14,3 +14,4 @@ URL: http://github.com/jardimViniciusC/BioNetStat
 BugReports: http://github.com/jardimViniciusC/BioNetStat/issues
 Encoding: UTF-8
 VignetteBuilder: knitr, rmarkdown
+PackageStatus: Deprecated
